--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,7 @@
   </title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
 
   <link rel="stylesheet" href="{{ site.github.url }}/css/main.css">
   <link rel="stylesheet" href="{{ site.github.url }}/css/syntax.css">
